--- a/src/views/admin.hbs
+++ b/src/views/admin.hbs
@@ -225,7 +225,7 @@
                 {{/if}}
                 <button type="submit" class="btn btn-primary mt-3">Revisar Documentación</button>
             </form>
-            <h3>Dar o Quitar Permisos de Administración</h3>
+            <h3>Dar o Quitar Permisos de Premium/Administración</h3>
             <form method="post" action="/admin/editPermissions?_method=PUT">
                 <label for="email" class="form-label">Correo Electrónico:</label>
                 <input type="text" id="email" name="email" class="form-control" required>
